Closed
Bug 1396463
Opened 8 years ago
Closed 8 years ago
Assertion failure: false (MOZ_ASSERT_UNREACHABLE: Invalid signature scheme.), at security/manager/ssl/nsNSSCallbacks.cpp:910
Categories
(Core :: Security: PSM, defect)
Core
Security: PSM
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | --- | unaffected |
| firefox57 | --- | fixed |
People
(Reporter: bc, Assigned: franziskus)
References
Details
(Keywords: assertion, regression)
Attachments
(1 file)
|
18.14 KB,
text/plain
|
Details |
1. https://www.princess.com/find/searchResults.do?trade=K
2. Assertion failure: false (MOZ_ASSERT_UNREACHABLE: Invalid signature scheme.), at /mozilla/builds/nightly/mozilla/security/manager/ssl/nsNSSCallbacks.cpp:910
#01: getSignatureName (/mozilla/builds/nightly/mozilla/security/manager/ssl/nsNSSCallbacks.cpp:910)
#02: HandshakeCallback(PRFileDesc*, void*) (:?)
#03: ssl_FinishHandshake (/mozilla/builds/nightly/mozilla/security/nss/lib/ssl/sslsecur.c:98)
#04: ssl3_FinishHandshake (/mozilla/builds/nightly/mozilla/security/nss/lib/ssl/ssl3con.c:11627)
#05: ssl3_AuthCertificateComplete (:?)
#06: SSL_AuthCertificateComplete (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libssl3.so)
#07: nsNSSSocketInfo::SetCertVerificationResult(int, mozilla::psm::SSLErrorMessageType) (/mozilla/builds/nightly/mozilla/security/manager/ssl/nsNSSIOLayer.cpp:676)
#08: mozilla::psm::(anonymous namespace)::SSLServerCertVerificationResult::Run() (/mozilla/builds/nightly/mozilla/security/manager/ssl/SSLServerCertVerification.cpp:1868)
This is reproducible on recent trunk regardless of stylo. It is an explosive crash in bughunter responsible for assertions on over 2100 urls since it landed.
| Assignee | ||
Comment 1•8 years ago
|
||
Ugh, sorry my bad. I removed the wrong line. I'll land a bustage fix for bug 1304923.
Assignee: nobody → franziskuskiefer
Pushed by franziskuskiefer@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/ac433313dbd2
add ssl_sig_rsa_pkcs1_sha1 case to getSignatureName, r=bustage
Pushed by franziskuskiefer@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/4badc1d24b23
add ssl_sig_rsa_pkcs1_sha1md5 case to getSignatureName, r=bustage
Comment 4•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/ac433313dbd2
https://hg.mozilla.org/mozilla-central/rev/4badc1d24b23
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox57:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Updated•8 years ago
|
status-firefox55:
--- → unaffected
status-firefox56:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•