Bug 1396463 - add ssl_sig_rsa_pkcs1_sha1 case to getSignatureName, r=bustage

MozReview-Commit-ID: 814ZXGoesQz